fixed spacing of elements in each index

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -34,8 +34,9 @@
 	box-sizing: border-box;
 	border: 1px solid #DCDEDD;
 	background-color: white;
-	margin: 50px;
-	margin-bottom: 100px;
+	margin: 30px;
+	margin-bottom: 50px;
+	max-width: 450px
 }
 
 #top-image{
@@ -43,14 +44,14 @@
 	height: 220px;
 }
 
+#info{
+	padding: 20px;
+}
+
 #top-image img{
 	object-fit: cover;
 	width: 100%;
 	height: 100%;
-}
-
-#description {
-	padding: 20px;
 }
 
 #description h2{
@@ -79,11 +80,10 @@
 	-webkit-box-orient: vertical;
 }
 
-#creator{
-	padding: 18px;
-}
 
 #creator p{
+	margin-top: 20px;
+	margin-bottom: 20px;
 	font-weight: 400;
 }
 
